--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "chrome",
             "request": "launch",
             "url": "http://localhost:5173/",
-            "webRoot": "${workspaceFolder}",
+            "webRoot": "${workspaceFolder}/src",
             "skipFiles": [
                 "<node_internals>/**",
                 "**/node_modules/**"
